--- a/root/index.html
+++ b/root/index.html
@@ -187,7 +187,7 @@
                 <h2 class="s-title">Troisième</h2>
                 <p class="s-description text-center">
                  Collège: Les-Gâtines René Cassin <br>
-                  Année: 2014-2019
+                  Année: 2014-2019 <br>
                   Diplôme: Brevet des Collèges
                 </p>
               </div>
@@ -202,7 +202,7 @@
                 <h2 class="s-title">Lycée</h2>
                 <p class="s-description text-center">
                   Lycée: Jean-Baptiste Corot <br>
-                  Année: 2019-2023
+                  Année: 2019-2023 <br>
                   Diplôme: Baccaloréat Général
                 </p>
               </div>
@@ -217,8 +217,8 @@
                 <h2 class="s-title">BTS SIO</h2>
                 <p class="s-description text-center">
                   Ecole: ORT Daniel Mayer<br>
-                  Année: 2022-2024
-                  Diplôme: Brevet des Collèges
+                  Année: 2022-2024 <br>
+                  Diplôme: Brevet de Technicien Supérieur Informatique
                 </p>
               </div>
             </div>
