--- a/root/index.html
+++ b/root/index.html
@@ -48,11 +48,11 @@
           <li><a class="nav-link scrollto" href="#about" dlass>A Propos</a></li>
           <li><a class="nav-link scrollto" href="#services">Parcours</a></li>
           <li><a class="nav-link scrollto " href="#work">Projets</a></li>
-          <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
+          <li><a class="nav-link scrollto " href="#blog">Documents</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
-              <li><a href="#">Deuxième année</a></li>
+              <li><a href="stage2.html">Deuxième année</a></li>
 
             </ul>
           </li>
@@ -92,7 +92,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="images/MOI.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="images/moifond.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -140,16 +140,17 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Je suis étudiant actuellement en BTS d'informatique à l'école ORT Daniel Mayer à la recherche d'un stage.
-                      Je suis discipliné, sérieux, inventif ayant pour passions le sport, l'informatique et les jeux vidéos en hobby.
+                      Je suis étudiant actuellement en BTS d'informatique à l'école ORT Daniel Mayer en SLAM, Solutions Logiciels et Applications Mobile.
+                      Je suis discipliné, sérieux, créatif ayant pour passions le sport, l'informatique et les jeux vidéos en hobbies.
                       Je suis donc capable de m'impliquer, peu importe l'importance de la tâche. La détermination est primordiale.
                     </p>
                     <p class="lead">
-                      Mes matières préférées sont la Culture, Economique, Juridique et Managériale, l'anglais
+                      Mes domaines préférés sont la Culture Economique, Juridique et Managériale, l'Anglais, le Marketing Digital et le Community Management.
                     </p>
                     <p class="lead">
-                      Je me décrirais comme quelqu'un de curieux, optimiste, dynamique et déterminé. Je
-                      fais beaucoup de sport en dehors des cours pour la santé physique et mentale.
+                      Je me décrirais comme quelqu'un de curieux, optimiste, dynamique et déterminé.
+                      Je fais beaucoup de sport en dehors des cours pour la santé physique et mentale.
+                      J'ai la créativité en tête et je redouble d'efforts si j'en manque.
 
                     </p>
                   </div>
@@ -218,7 +219,7 @@
                 <p class="s-description text-center">
                   Ecole: ORT Daniel Mayer<br>
                   Année: 2022-2024 <br>
-                  Diplôme: Brevet de Technicien Supérieur Informatique
+                  Diplôme: BTS Informatique
                 </p>
               </div>
             </div>
@@ -419,7 +420,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/CV.pdf" download="CV_Amaury_Lefevre"><img src="images/cvScreen.png" alt="" class="img-fluid" ></a>
+                <a href="dossier/CV.pdf" download="CV_Amaury_Lefevre"><img src="images/RealCVScreen.png" alt="" class="img-fluid" ></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -427,7 +428,7 @@
                     <h6 class="category">CV</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
+                <h3 class="card-title"><a href="dossier/Amaury%20Lefevre%20-%20CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
                 <p class="card-description">
                   Ce CV est mis à jour que pour le plus important.
                 </p>
@@ -481,7 +482,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="contact-mf">
-              <div id="contact" class="box-shadow-full">
+              <div id="contacter" class="box-shadow-full">
                 <div class="row">
 
                   <div class="col-md-6">
@@ -507,7 +508,7 @@
                         <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/amaury-lefevre-3ab249294/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
