--- a/root/stage2.html
+++ b/root/stage2.html
@@ -86,15 +86,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/MiidS.png" alt="">
+                  <img src="images/SConnect.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/MiidScreen.png" alt="">
+                  <img src="images/screendevSconnect.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/MiidCodeScreen.png" alt="">
+                  <img src="images/carouselSconnect.png" alt="">
                 </div>
 
               </div>
@@ -106,18 +106,18 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: M.I.I.D Services</li>
-                <li><strong>Adresse</strong>: 60 Rue Boileau, 91600 Savigny-sur-Orge</li>
-                <li><strong>Forme juridique</strong>: SURL </li>
-                <li><strong>Taille</strong>: Petite entreprise</li>
-                <li><strong>Effectif</strong>: 2 personnes</li>
-                <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
+                <li><strong>Dénomination</strong>: SouchesConnect</li>
+                <li><strong>Adresse</strong>: 111 rue </li>
+                <li><strong>Forme juridique</strong>: ..............</li>
+                <li><strong>Taille</strong>: Petite Entreprise</li>
+                <li><strong>Effectif</strong>: 1 personne </li>
+                <li><strong>Secteur d’activité</strong>: Sécurité et Réseaux</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.
+                Après avoir du suspendre le local pendant la pandémie du Coronavirus, Mr. Sylla a relancé ses activités au sein de son entreprise Sconnect.
               </p>
             </div>
             <div class="portfolio-info">
@@ -131,8 +131,10 @@
               <ul>
                 <li><strong>Ressources Tangibles</strong></li>
                 <li>Bureaux</li>
+                <li>Local</li>
                 <li><strong>Ressources Intangibles</strong></li>
                 <li>Site Internet</li>
+                <li>Logiciel</li>
               </ul>
             </div>
             <div class="portfolio-info">
@@ -144,9 +146,9 @@
             <div class="portfolio-description">
               <h2>Autres Détails</h2>
               <ul>
-                <li><strong>Thème Principal</strong>: Exercice de Refonte du site Internet</li>
-                <li><strong>Client</strong>: M.I.I.D Services</li>
-                <li><strong>Date du Projet</strong>: 05/2023-06/2023</li>
+                <li><strong>Thème Principal</strong>: Création d'un site Internet</li>
+                <li><strong>Client</strong>: Sconnect</li>
+                <li><strong>Date du Projet</strong>: 01/2024-02/2024</li>
               </ul>
             </div>
           </div>
