--- a/stage1.html
+++ b/stage1.html
@@ -31,16 +31,16 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index2.html">PorFolio</a></h1>
+      <h1 class="logo"><a href="index.html">PorFolio</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index2.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="index2.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index2.html#about">A Propos</a></li>
-          <li><a class="nav-link scrollto" href="index2.html#services">Parcours</a></li>
-          <li><a class="nav-link scrollto" href="index2.html#work">Projets</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
+          <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="stage1.html">Première Année</a></li>
@@ -64,7 +64,7 @@
           <h2 class="hero-title mb-4">Stage de Première Année</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="index2.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li class="breadcrumb-item active">Première Année</li>
           </ol>
