Remise à niveau des projets

--- a/CetaBot.html
+++ b/CetaBot.html
@@ -61,12 +61,12 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Stage de Première Année</h2>
+          <h2 class="hero-title mb-4">Ceta Bot</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">Première Année</li>
+            <li class="breadcrumb-item active">CetaBot</li>
           </ol>
         </div>
       </div>
@@ -86,15 +86,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/MiidS.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="images/MiidScreen.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="images/MiidCodeScreen.png" alt="">
+                  <img src="images/CetaBot.png" alt="">
                 </div>
 
               </div>
@@ -106,51 +98,20 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: M.I.I.D Services</li>
-                <li><strong>Adresse</strong>: 60 Rue Boileau, 91600 Savigny-sur-Orge</li>
-                <li><strong>Forme juridique</strong>: SURL </li>
-                <li><strong>Taille</strong>: Petite entreprise</li>
-                <li><strong>Effectif</strong>: 2 personnes</li>
-                <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
+                <li><strong>Dénomination</strong>: CetaBot</li>
+                <li><strong>Language</strong>: Javascript</li>
+                <li><strong>Réseau relié</strong>: Discord </li>
+                <li><strong>Utilités</strong>: Administration</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.
+              Ce bot discord est une entité à part entière permettant d'aider au management des serveurs Discord.
+                Il est programmé à mon image, majoritairement pour pour gérer le nombre d'utilisateur dans un serveur.
               </p>
             </div>
-            <div class="portfolio-info">
-              <h3>RGPD</h3>
-              <ul>
-                <li><strong>J'attends les informations</strong></li>
-              </ul>
-            </div>
-            <div class="portfolio-info">
-              <h3>Ressources Tangibles et Intangibles</h3>
-              <ul>
-                <li><strong>Ressources Tangibles</strong></li>
-                <li>Bureaux</li>
-                <li><strong>Ressources Intangibles</strong></li>
-                <li>Site Internet</li>
-              </ul>
-            </div>
-            <div class="portfolio-info">
-              <h3>RSE</h3>
-              <ul>
-                <li><strong>J'attends les informations</strong></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>Autres Détails</h2>
-              <ul>
-                <li><strong>Thème Principal</strong>: Exercice de Refonte du site Internet</li>
-                <li><strong>Client</strong>: M.I.I.D Services</li>
-                <li><strong>Date du Projet</strong>: 05/2023-06/2023</li>
-              </ul>
-            </div>
           </div>
-
         </div>
 
       </div>
