--- a/HelpOrt.html
+++ b/HelpOrt.html
@@ -66,7 +66,7 @@
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">Première Année</li>
+            <li class="breadcrumb-item active">HelpOrt</li>
           </ol>
         </div>
       </div>
@@ -106,25 +106,17 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: M.I.I.D Services</li>
-                <li><strong>Adresse</strong>: 60 Rue Boileau, 91600 Savigny-sur-Orge</li>
-                <li><strong>Forme juridique</strong>: SURL </li>
-                <li><strong>Taille</strong>: Petite entreprise</li>
-                <li><strong>Effectif</strong>: 2 personnes</li>
-                <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
+                <li><strong>Dénomination</strong>: HelpOrt</li>
+                <li><strong>Languages</strong>: PHP, HTML, CSS / Java, SQL</li>
+                <li><strong>Framework</strong>: Symfony / Java FXML</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.
+              Ce projet à pour but de créer un forum d'entraide pour les étudiants.
+                Ils postent une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.
               </p>
-            </div>
-            <div class="portfolio-info">
-              <h3>RGPD</h3>
-              <ul>
-                <li><strong>J'attends les informations</strong></li>
-              </ul>
             </div>
             <div class="portfolio-info">
               <h3>Ressources Tangibles et Intangibles</h3>
@@ -133,20 +125,6 @@
                 <li>Bureaux</li>
                 <li><strong>Ressources Intangibles</strong></li>
                 <li>Site Internet</li>
-              </ul>
-            </div>
-            <div class="portfolio-info">
-              <h3>RSE</h3>
-              <ul>
-                <li><strong>J'attends les informations</strong></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>Autres Détails</h2>
-              <ul>
-                <li><strong>Thème Principal</strong>: Exercice de Refonte du site Internet</li>
-                <li><strong>Client</strong>: M.I.I.D Services</li>
-                <li><strong>Date du Projet</strong>: 05/2023-06/2023</li>
               </ul>
             </div>
           </div>
