--- a/stage2.html
+++ b/stage2.html
@@ -108,7 +108,7 @@
               <ul>
                 <li><strong>Dénomination</strong>: SouchesConnect</li>
                 <li><strong>Adresse</strong>: 111 rue </li>
-                <li><strong>Forme juridique</strong>: ..............</li>
+                <li><strong>Forme juridique</strong>: EURL </li>
                 <li><strong>Taille</strong>: Petite Entreprise</li>
                 <li><strong>Effectif</strong>: 1 personne </li>
                 <li><strong>Secteur d’activité</strong>: Sécurité et Réseaux</li>
