--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         <p><span class="title-s">Nom: </span> <span>Lefevre</span></p>
                         <p><span class="title-s">Prénom: </span> <span>Amaury </span></p>
                         <p><span class="title-s">Profil: </span> <span>Etudiant à l'ORT Daniel Mayer</span></p>
-                        <p><span class="title-s">Email: </span> <span>amaury.lefevre@outlook.fr</span></p>
-                        <p><span class="title-s">Téléphone: </span> <span>06 30 32 81 11</span></p>
+                        <p><span class="title-s">Email: </span> <span><a href="mailto:amaury.lefevre@outlook.fr">amaury.lefevre@outlook.fr</a></span></p>
+                        <p><span class="title-s">Téléphone: </span> <span><a href="tel:0630328111">06 30 32 81 11</a></span></p>
                         <p><span class="title-s">Langues: </span> <span>
                           <ul>
                             <li>Français ==> Confirmé</li>
@@ -120,15 +120,15 @@
                     </div>
                     <span>CSS</span> <span class="pull-right">50%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>PHP</span> <span class="pull-right">30%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">30%</span>
+                    <span>JAVA</span> <span class="pull-right">30%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -281,7 +281,7 @@
       </div>
     </div><!-- End Counter Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Projects Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -300,9 +300,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/CetaBot.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="CetaBot.html">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="images/CetaBot.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -311,6 +311,54 @@
                     <h2 class="w-title">Ceta Bot</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Discord Bot</span> / Début: <span class="w-date">Novembre 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="CetaBot.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="IDC.html">
+                <div class="work-img">
+                  <img src="images/IDC.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Icon Developpment Center</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet d'Entreprise</span> / Début: <span class="w-date">Avril 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="IDC.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/MiidS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage1.html">
+                <div class="work-img">
+                  <img src="images/MiidS.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Stage de Première Année</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Stage</span> / Début: <span class="w-date">Mai-Juin 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -324,57 +372,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/SConnect.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage2.html">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Icon Developpment Center</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Projet d'Entreprise</span> / Début: <span class="w-date">Avril 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Stage de Première Année</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Stage</span> / Début: <span class="w-date">Mai-Juin 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="images/SConnect.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -387,7 +387,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="stage2.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -400,7 +400,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Blog Section ======= -->
+    <!-- ======= Documentation Section ======= -->
     <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
