Ajout Projet HelpOrt + TS

--- a/HelpOrt.html
+++ b/HelpOrt.html
@@ -86,15 +86,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/MiidS.png" alt="">
+                  <img src="images/HelpOrtJava.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/MiidScreen.png" alt="">
+                  <img src="images/demandeJava.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/MiidCodeScreen.png" alt="">
+                  <img src="images/HelpOrtWeb.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="images/statsHOJava.png" alt="">
                 </div>
 
               </div>
