--- a/index.html
+++ b/index.html
@@ -394,7 +394,30 @@
               </div>
             </div>
           </div>
-
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/HelpOrtWeb.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrt.html">
+                <div class="work-img">
+                  <img src="images/HelpOrtJava.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">HelpOrt</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet Scolaire</span> / Début: <span class="w-date"> Septembre 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="HelpOrt.html"><span class="bi bi-1-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -420,7 +443,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/CV.pdf" download="CV_Amaury_Lefevre"><img src="images/RealCVScreen.png" alt="" class="img-fluid" ></a>
+                <a href="dossier/AmauryLefevre-CV.pdf" download="CV_Amaury_Lefevre"><img src="images/RealCVScreen.png" alt="" class="img-fluid" ></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -428,7 +451,7 @@
                     <h6 class="category">CV</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/Amaury%20Lefevre%20-%20CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
+                <h3 class="card-title"><a href="dossier/AmauryLefevre-CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
                 <p class="card-description">
                   Ce CV est mis à jour que pour le plus important.
                 </p>
@@ -447,7 +470,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/TableauSynthèse.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre"><img src="images/tcScreen.png" alt="" class="img-fluid" height="300"></a>
+                <a href="dossier/Tableau_Synthese.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre"><img src="images/tcScreen.png" alt="" class="img-fluid" height="300"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -455,7 +478,7 @@
                     <h6 class="category">Tableau de Compétences</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/TableauSynthèse.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre">Mon Tableau de Compétences</a></h3>
+                <h3 class="card-title"><a href="dossier/Tableau_Synthese.pdf" download="Tableau_De_Synthèse_Amaury_Lefevre">Mon Tableau de Compétences</a></h3>
                 <p class="card-description">
                   Ce tableau regroupe les principales compétences réquises que j'ai coché pour chaque projet.
                 </p>
